--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1895,6 +1895,16 @@
   number = {1}
 }
 
+@inproceedings{bishop_bayesian_1998,
+  title = {Bayesian {{PCA}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Bishop, Christopher},
+  year = {1998},
+  volume = {11},
+  publisher = {{MIT Press}},
+  file = {/home/msca8h/Zotero/storage/PMKWCJ8X/Bishop - 1998 - Bayesian PCA.pdf}
+}
+
 @article{blei_variational_2006,
   title = {Variational Inference for {{Dirichlet}} Process Mixtures},
   author = {Blei, David M. and Jordan, Michael I.},
@@ -9906,6 +9916,20 @@
   series = {Lecture {{Notes}} in {{Statistics}}}
 }
 
+@inproceedings{neal_classification_2006,
+  title = {Classification with {{Bayesian}} Neural Networks},
+  booktitle = {Machine {{Learning Challenges}}: {{Evaluating Predictive Uncertainty}}, {{Visual Object Classification}}, and {{Recognising Tectual Entailment}}},
+  author = {Neal, Radford M.},
+  year = {2006},
+  pages = {28--32},
+  publisher = {{Springer}},
+  address = {{Berlin, Heidelberg}},
+  file = {/home/msca8h/Zotero/storage/DY44UXHD/Neal - 2006 - Classification with Bayesian Neural Networks.pdf},
+  keywords = {Bayesian Neural Network,Hide Unit,Markov Chain Monte Carlo Method,Neural Network Model,Training Case},
+  language = {en},
+  series = {Lecture {{Notes}} in {{Computer Science}}}
+}
+
 @article{neal_improved_1992,
   title = {An {{Improved Acceptance Procedure}} for the {{Hybrid Monte Carlo Algorithm}}},
   author = {Neal, R. M.},
@@ -12415,6 +12439,19 @@
   pages = {692--702},
   journal = {Proceedings of the IEEE},
   number = {6}
+}
+
+@inproceedings{schmidt_bayesian_2009,
+  title = {Bayesian Non-Negative Matrix Factorization},
+  booktitle = {Independent {{Component Analysis}} and {{Signal Separation}}},
+  author = {Schmidt, Mikkel N. and Winther, Ole and Hansen, Lars Kai},
+  year = {2009},
+  pages = {540--547},
+  publisher = {{Springer}},
+  address = {{Berlin, Heidelberg}},
+  file = {/home/msca8h/Zotero/storage/9TDMYVJT/Schmidt et al. - 2009 - Bayesian Non-negative Matrix Factorization.pdf},
+  language = {en},
+  series = {Lecture {{Notes}} in {{Computer Science}}}
 }
 
 @article{schmidt_fast_2013,
