--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,33 @@
 ---
 ---
 
+@inproceedings{kim_practical_2023,
+  title = {{{Markov}} {{Chain}} {{Score}} {{Ascent}}: {{A}} Unifying Framework of Variational Inference with {{Markovian}} Gradients},
+  author = {Kim, Kyurae and Oh, Jisu and Gardner, Jacob R. and Dieng, Adji Bousso and Kim, Hongseok},
+  year = {2022},
+  selected = {true},
+  teaser = {/assets/img/teasers/mcsa_airfoil.png},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (NeurIPS)},
+  code = {https://github.com/Red-Portal/KLpqVI.jl},
+  link = {https://www.researchgate.net/publication/364325004_Markov_Chain_Score_Ascent_A_Unifying_Framework_of_Variational_Inference_with_Markovian_Gradients}
+}
+
+@inproceedings{kim_practical_2023,
+  title = {Practical and Matching Gradient Variance Bounds for Black-Box Variational {{Bayesian}} Inference},
+  author = {Kim, Kyurae and Wu, Kaiwen and Oh, Jisu and Gardner, Jacob R.},
+  year = {2023},
+  month = mar,
+  selected = {true},
+  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML), to be presented.}},
+}
+
 @inproceedings{kim_markov_2022,
   title = {{{Markov}} {{Chain}} {{Score}} {{Ascent}}: {{A}} Unifying Framework of Variational Inference with {{Markovian}} Gradients},
   author = {Kim, Kyurae and Oh, Jisu and Gardner, Jacob R. and Dieng, Adji Bousso and Kim, Hongseok},
   year = {2022},
   selected = {true},
   teaser = {/assets/img/teasers/mcsa_airfoil.png},
-  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
   code = {https://github.com/Red-Portal/KLpqVI.jl},
   link = {https://www.researchgate.net/publication/364325004_Markov_Chain_Score_Ascent_A_Unifying_Framework_of_Variational_Inference_with_Markovian_Gradients}
 }
