fix wrong paper label

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@inproceedings{kim_practical_2023,
+@inproceedings{kim_markov_2022,
   title = {{{Markov}} {{Chain}} {{Score}} {{Ascent}}: {{A}} Unifying Framework of Variational Inference with {{Markovian}} Gradients},
   author = {Kim, Kyurae and Oh, Jisu and Gardner, Jacob R. and Dieng, Adji Bousso and Kim, Hongseok},
   year = {2022},
