--- a/_news/2023-04-24-icml2023.md
+++ b/_news/2023-04-24-icml2023.md
@@ -4,4 +4,4 @@ date: 2023-04-24
 inline: true
 ---
 
-Our paper on the gradient variance of BBVI has been accepted to **ICLM'23** as a **live oral** presentation.
+Our paper on BBVI has been accepted to **ICML'23** as a **live oral** presentation.
