--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   month = mar,
   selected = {true},
   booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML), to be presented.}},
+  link = {https://www.researchgate.net/publication/369357686_Practical_and_Matching_Gradient_Variance_Bounds_for_Black-Box_Variational_Bayesian_Inference}
 }
 
 @inproceedings{kim_markov_2022,
