--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,11 +5,11 @@
   title = {Practical and Matching Gradient Variance Bounds for Black-Box Variational {{Bayesian}} Inference},
   author = {Kim, Kyurae and Wu, Kaiwen and Oh, Jisu and Gardner, Jacob R.},
   year = {2023},
-  month = mar,
+  month = July,
   selected = {true},
-  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML), to be presented.}},
+  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML)}},
   teaser = {/assets/img/teasers/bbvi_gradient_variance.png},
-  link = {https://www.researchgate.net/publication/369357686_Practical_and_Matching_Gradient_Variance_Bounds_for_Black-Box_Variational_Bayesian_Inference}
+  link = {https://www.researchgate.net/publication/371006162_Practical_and_Matching_Gradient_Variance_Bounds_for_Black-Box_Variational_Bayesian_Inference}
 }
 
 @inproceedings{kim_markov_2022,
