fix neurips news

--- a/_news/2023-10-21-neurips23.md
+++ b/_news/2023-10-21-neurips23.md
@@ -4,4 +4,4 @@ date: 2023-04-24
 inline: true
 ---
 
-Our results on the convergence BBVI and local BayesOpt have been accepted to **NeurIPS'23**.
+our results on the convergence BBVI and local BayesOpt have **both** been accepted to **NeurIPS'23**
