--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@inproceedings{kim_convergence_2023,
+  title = {On the Convergence and Scale Parameterizations of Black-Box Variational Inference},
+  author = {Kim, Kyurae and Oh, Jisu and Wu, Kaiwen and Ma, Yi-An and Gardner, Jacob R.},
+  year = {2023},
+  month = December,
+  selected = {true},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
+  link = {https://arxiv.org/abs/2305.15349}
+}
+
+@inproceedings{kim_behavior_2023,
+  title = {The Behavior and Convergence of Local {{Bayesian}} Optimization},
+  author = {Wu, Kaiwen and Kim, Kyurae and Garnett, Roman and Gardner, Jacob R.},
+  year = {2023},
+  month = December,
+  selected = {true},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
+  link = {https://arxiv.org/abs/2305.15572}
+}
+
 @inproceedings{kim_practical_2023,
   title = {Practical and Matching Gradient Variance Bounds for Black-Box Variational {{Bayesian}} Inference},
   author = {Kim, Kyurae and Wu, Kaiwen and Oh, Jisu and Gardner, Jacob R.},
@@ -9,7 +29,7 @@
   selected = {true},
   booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML)}},
   teaser = {/assets/img/teasers/bbvi_gradient_variance.png},
-  link = {https://www.researchgate.net/publication/371006162_Practical_and_Matching_Gradient_Variance_Bounds_for_Black-Box_Variational_Bayesian_Inference}
+  link = {https://proceedings.mlr.press/v202/kim23w.html}
 }
 
 @inproceedings{kim_markov_2022,
@@ -20,7 +40,7 @@
   teaser = {/assets/img/teasers/mcsa_airfoil.png},
   booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
   code = {https://github.com/Red-Portal/KLpqVI.jl},
-  link = {https://www.researchgate.net/publication/364325004_Markov_Chain_Score_Ascent_A_Unifying_Framework_of_Variational_Inference_with_Markovian_Gradients}
+  link = {https://proceedings.neurips.cc/paper_files/paper/2022/hash/e0fbc0f2e35e58aeffe5524a69ba90e5-Abstract-Conference.html}
 }
 
 @article{kim_probabilistic_2020,
@@ -57,7 +77,6 @@
   pages={103334},
   journal={Computers in Biology and Medicine},
   language={en},
-  selected={true},
   teaser = {/assets/img/teasers/cardiac_analysis.png},
   link = {https://www.researchgate.net/publication/333869321_EVCMR_A_tool_for_the_quantitative_evaluation_and_visualization_of_cardiac_MRI_data}
 }
