--- a/_news/2023-10-21-neurips23.md
+++ b/_news/2023-10-21-neurips23.md
@@ -4,4 +4,4 @@ date: 2023-04-24
 inline: true
 ---
 
-our results on the convergence BBVI and local BayesOpt have **both** been accepted to **NeurIPS'23**
+2 papers have been accepted to **NeurIPS'23**: 1 on the convergence BBVI and 1 on local BayesOpt (spotlight)
