fix title of bbvi paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @inproceedings{kim_convergence_2023,
-  title = {On the Convergence and Scale Parameterizations of Black-Box Variational Inference},
+  title = {On the Convergence of Black-Box Variational Inference},
   author = {Kim, Kyurae and Oh, Jisu and Wu, Kaiwen and Ma, Yi-An and Gardner, Jacob R.},
   year = {2023},
   month = December,
