--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   month = December,
   selected = {true},
   booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
+  teaser = {/assets/img/teasers/bbvi_convergence.png},
   link = {https://arxiv.org/abs/2305.15349}
 }
 
