add teaser for local BO paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,6 +19,7 @@
   month = December,
   selected = {true},
   booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
+  teaser = {/assets/img/teasers/local_bo.png},
   link = {https://arxiv.org/abs/2305.15572}
 }
 
