--- a/_news/2022-09-14-neurips2022.md
+++ b/_news/2022-09-14-neurips2022.md
@@ -4,4 +4,4 @@ date: 2022-09-14
 inline: true
 ---
 
-1 paper has been accepted to **NeurIPS'22**.
+1 paper on inclusive KL minimization has been accepted to **NeurIPS'22**.
