--- a/_news/2023-04-24-icml23.md
+++ b/_news/2023-04-24-icml23.md
@@ -4,4 +4,4 @@ date: 2023-04-24
 inline: true
 ---
 
-1 paper on BBVI has been accepted to **ICML'23** for **live oral** presentation
+1 paper on the gradient variance of BBVI has been accepted to **ICML'23** for **live oral** presentation
