add yoon kim publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,15 @@
   link = {https://arxiv.org/abs/2305.15572}
 }
 
+@article{kim_automatic_2023,
+  title = {Automatic calculation of myocardial perfusion reserve using deep learning with uncertainty quantification},
+  author = {Kim, Yoon-Chul and Kim, Kyurae and Choe, Yeon Hyeon},
+  year = {2023},
+  %pages = {1--1},
+  journal = {Quantitative Imaging in Medicine and Surgery},
+  selected = {false},
+}
+
 @inproceedings{kim_practical_2023,
   title = {Practical and Matching Gradient Variance Bounds for Black-Box Variational {{Bayesian}} Inference},
   author = {Kim, Kyurae and Wu, Kaiwen and Oh, Jisu and Gardner, Jacob R.},
