--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,6 +27,7 @@
   title = {Automatic calculation of myocardial perfusion reserve using deep learning with uncertainty quantification},
   author = {Kim, Yoon-Chul and Kim, Kyurae and Choe, Yeon Hyeon},
   year = {2023},
+  month = October,
   %pages = {1--1},
   journal = {Quantitative Imaging in Medicine and Surgery},
   selected = {false},
