add top reviewer news

--- a/_news/2023-10-21-neurips23.md
+++ b/_news/2023-10-21-neurips23.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-date: 2023-04-24
+date: 2023-10-21
 inline: true
 ---
 
-2 papers have been accepted to **NeurIPS'23**: 1 on the convergence BBVI and 1 on local BayesOpt (spotlight)
+2 papers have been accepted to **NeurIPS'23**: 1 on the convergence BBVI and 1 on local BayesOpt (spotlight).
