--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@inproceedings{kim_saem_2024,
+  title = {On the Convergence of the Expectation-Maximization Algorithm with biased MCMC,},
+  author = {Gruffaz, Samuel and Kim, Kyurae and Durmus, Alain and Gardner, Jacob R},
+  year = {2024},
+  month = May,
+  selected = {true},
+  booktitle = {Proceedings of the {{International Conference}} on {{Artificioal Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
+  %link = {https://arxiv.org/abs/2305.15349}
+}
+
+@inproceedings{kim_stl_2024,
+  title = {Linear Convergence of Black-Box Variational Inference: Should We Stick the Landing?,},
+  author = {Kim, Kyurae and Ma, Yi-An and Gardner, Jacob R.},
+  year = {2024},
+  month = May,
+  selected = {true},
+  booktitle = {Proceedings of the {{International Conference}} on {{Artificioal Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
+  %link = {https://arxiv.org/abs/2305.15349}
+}
+
 @inproceedings{kim_convergence_2023,
   title = {On the Convergence of Black-Box Variational Inference},
   author = {Kim, Kyurae and Oh, Jisu and Wu, Kaiwen and Ma, Yi-An and Gardner, Jacob R.},
@@ -75,7 +95,7 @@
   pages = {105150},
   journal = {Computer Methods and Programs in Biomedicine},
   language = {en},
-  selected = {true},
+  selected = {false},
   teaser = {/assets/img/teasers/perfusion_mri_mc.png},
   link = {https://www.researchgate.net/publication/336731977_Automatic_myocardial_segmentation_in_dynamic_contrast_enhanced_perfusion_MRI_using_Monte_Carlo_dropout_in_an_encoder-decoder_convolutional_neural_network}
 }
