fix build, bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   year = {2024},
   month = May,
   selected = {true},
-  booktitle = {Proceedings of the {{International Conference}} on {{Artificioal Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
+  booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
   %link = {https://arxiv.org/abs/2305.15349}
 }
 
@@ -17,7 +17,7 @@
   year = {2024},
   month = May,
   selected = {true},
-  booktitle = {Proceedings of the {{International Conference}} on {{Artificioal Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
+  booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
   %link = {https://arxiv.org/abs/2305.15349}
 }
 
