change title for SAEM paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @inproceedings{kim_saem_2024,
-  title = {On the Convergence of the Expectation-Maximization Algorithm with biased MCMC,},
+  title = {Stochastic Approximation with Biased {{MCMC}} for Expectation-Maximization},
   author = {Gruffaz, Samuel and Kim, Kyurae and Durmus, Alain and Gardner, Jacob R},
   year = {2024},
   month = May,
@@ -12,13 +12,13 @@
 }
 
 @inproceedings{kim_stl_2024,
-  title = {Linear Convergence of Black-Box Variational Inference: Should We Stick the Landing?,},
+  title = {Linear Convergence of Black-Box Variational Inference: Should We Stick the Landing?},
   author = {Kim, Kyurae and Ma, Yi-An and Gardner, Jacob R.},
   year = {2024},
   month = May,
   selected = {true},
   booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
-  %link = {https://arxiv.org/abs/2305.15349}
+  link = {https://arxiv.org/abs/2307.14642}
 }
 
 @inproceedings{kim_convergence_2023,
