add teaser to MCMC-SAEM

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   month = May,
   selected = {true},
   booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
+  teaser = {/assets/img/teasers/saem.png},
   %link = {https://arxiv.org/abs/2305.15349}
 }
 
