--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,35 @@
 ---
 ---
 
+@inproceedings{kim_demystifying_2024,
+  title = {Demystifying Doubly Stochastic Gradient Descent},
+  author = {Kim, Kyurae and Ko, Joohwan and Ma, Yi-An and Gardner, Jacob R},
+  year = {2024},
+  month = July,
+  selected = {true},
+  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML) (to be presented)}},
+  %teaser = {/assets/img/teasers/saem.png},
+  %link = {https://arxiv.org/abs/2305.15349}
+}
+
+@inproceedings{ko_provably_2024,
+  title = {Provably Scalable Black-Box Variational Inference with Structured Variational Families},
+  author = {Ko, Joohwan and Kim, Kyurae and Kim, Woo Chang and Gardner, Jacob R},
+  year = {2024},
+  month = July,
+  selected = {true},
+  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML) (to be presented)}},
+  %teaser = {/assets/img/teasers/saem.png},
+  %link = {https://arxiv.org/abs/2305.15349}
+}
+
 @inproceedings{kim_saem_2024,
   title = {Stochastic Approximation with Biased {{MCMC}} for Expectation-Maximization},
   author = {Gruffaz, Samuel and Kim, Kyurae and Durmus, Alain and Gardner, Jacob R},
   year = {2024},
   month = May,
   selected = {true},
-  booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
+  booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS)}},
   teaser = {/assets/img/teasers/saem.png},
   %link = {https://arxiv.org/abs/2305.15349}
 }
@@ -18,7 +40,7 @@
   year = {2024},
   month = May,
   selected = {true},
-  booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS) (to be presented)}},
+  booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS)}},
   link = {https://arxiv.org/abs/2307.14642}
 }
 
