--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @inproceedings{kim_demystifying_2024,
-  title = {Demystifying Doubly Stochastic Gradient Descent},
+  title = {Demystifying Optimization with Doubly Stochastic Gradients},
   author = {Kim, Kyurae and Ko, Joohwan and Ma, Yi-An and Gardner, Jacob R},
   year = {2024},
   month = July,
