add teasers and arxiv links for ICML'24 papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,8 +8,8 @@
   month = July,
   selected = {true},
   booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML) (to be presented)}},
-  %teaser = {/assets/img/teasers/saem.png},
-  %link = {https://arxiv.org/abs/2305.15349}
+  teaser = {/assets/img/teasers/doublysgd.png},
+  link = {https://arxiv.org/abs/2406.00920}
 }
 
 @inproceedings{ko_provably_2024,
@@ -19,8 +19,8 @@
   month = July,
   selected = {true},
   booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML) (to be presented)}},
-  %teaser = {/assets/img/teasers/saem.png},
-  %link = {https://arxiv.org/abs/2305.15349}
+  teaser = {/assets/img/teasers/bbvi_structured.png},
+  link = {https://arxiv.org/abs/2401.10989}
 }
 
 @inproceedings{kim_saem_2024,
@@ -31,7 +31,7 @@
   selected = {true},
   booktitle = {Proceedings of the {{International Conference}} on {{Artificial Intelligence}} and {{Machine Learning} (AISTATS)}},
   teaser = {/assets/img/teasers/saem.png},
-  %link = {https://arxiv.org/abs/2305.15349}
+  link = {https://arxiv.org/abs/2402.17870}
 }
 
 @inproceedings{kim_stl_2024,
