add seoul news, add aabo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,23 @@
 ---
 ---
 
+@inproceedings{maus_approximation_2024,
+  title = {Approximation-Aware Bayesian Optimization},
+  author = {Maus, Natalie and Kim, Kyurae and Pleiss, Geoff and Eriksson, David and Cunningham, John P. and Gardner, Jacob R.},
+  year = {2024},
+  month = Dec,
+  selected = {true},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
+  link = {https://arxiv.org/abs/2406.04308}
+}
+
 @inproceedings{kim_demystifying_2024,
   title = {Demystifying SGD with Doubly Stochastic Gradients},
   author = {Kim, Kyurae and Ko, Joohwan and Ma, Yi-An and Gardner, Jacob R},
   year = {2024},
   month = July,
   selected = {true},
-  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML) (to be presented)}},
+  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML)}},
   teaser = {/assets/img/teasers/doublysgd.png},
   link = {https://arxiv.org/abs/2406.00920}
 }
@@ -18,7 +28,7 @@
   year = {2024},
   month = July,
   selected = {true},
-  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML) (to be presented)}},
+  booktitle = {Proceedings of the {{International Conference}} on {{Machine Learning} (ICML)}},
   teaser = {/assets/img/teasers/bbvi_structured.png},
   link = {https://arxiv.org/abs/2401.10989}
 }
@@ -50,7 +60,7 @@
   year = {2023},
   month = December,
   selected = {true},
-  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
   teaser = {/assets/img/teasers/bbvi_convergence.png},
   link = {https://arxiv.org/abs/2305.15349}
 }
@@ -61,7 +71,7 @@
   year = {2023},
   month = December,
   selected = {true},
-  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
   teaser = {/assets/img/teasers/local_bo.png},
   link = {https://arxiv.org/abs/2305.15572}
 }
