add teaser for AABO

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   month = Dec,
   selected = {true},
   booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
+  teaser = {/assets/img/teasers/aabo.png},
   link = {https://arxiv.org/abs/2406.04308}
 }
 
