add AISTATS'25 paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@inproceedings{roques_personalized_2025,
+  title = {Personalized Convolutional Dictionary Learning of Physiological Time Series}},
+  author = {Axel Roques and Samuel Gruffaz and Kyurae Kim and Alain Oliviero Durmus and Laurent Oudre},
+  year = {2025},
+  month = May,
+  selected = {false},
+  booktitle = {{{Proceedings}} of the {{International}} {{Conference}} on {{Artificial}} {{Intelligence}} and {{Statistics}}},
+}
+
 @inproceedings{maus_approximation_2024,
   title = {Approximation-Aware Bayesian Optimization},
   author = {Maus, Natalie and Kim, Kyurae and Pleiss, Geoff and Eriksson, David and Cunningham, John P. and Gardner, Jacob R.},
