--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@inproceedings{kim_tuning_2025,
+  title = {Tuning Sequential Monte Carlo Samplers via Greedy Incremental Divergence Minimization},
+  author = {Kim Kyurae and Zuheng Xu and Jacob R. Gardner and Trevor Campbell},
+  year = {2025},
+  month = July,
+  selected = {true},
+  booktitle = {{{Proceedings}} of the {{International}} {{Conference}} on {{Machine}} {{Learning}}},
+}
+
 @inproceedings{roques_personalized_2025,
   title = {Personalized Convolutional Dictionary Learning of Physiological Time Series}},
   author = {Axel Roques and Samuel Gruffaz and Kyurae Kim and Alain Oliviero Durmus and Laurent Oudre},
@@ -34,7 +43,7 @@
 
 @inproceedings{ko_provably_2024,
   title = {Provably Scalable Black-Box Variational Inference with Structured Variational Families},
-  author = {Ko, Joohwan and Kim, Kyurae and Kim, Woo Chang and Gardner, Jacob R},
+  author = {Ko*, Joohwan and Kim*, Kyurae and Kim, Woo Chang and Gardner, Jacob R},
   year = {2024},
   month = July,
   selected = {true},
