fix names in SMC paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{kim_tuning_2025,
   title = {Tuning Sequential Monte Carlo Samplers via Greedy Incremental Divergence Minimization},
-  author = {Kim Kyurae and Zuheng Xu and Jacob R. Gardner and Trevor Campbell},
+  author = {Kyurae Kim* and Zuheng Xu* and Jacob R. Gardner and Trevor Campbell},
   year = {2025},
   month = July,
   selected = {true},
