add teaser for SMC paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   year = {2025},
   month = July,
   selected = {true},
+  teaser = {/assets/img/teasers/adaptive_smc_incremental_kl.png},
   booktitle = {{{Proceedings}} of the {{International}} {{Conference}} on {{Machine}} {{Learning}}},
 }
 
