--- a/_news/2025-05-01-icml25.md
+++ b/_news/2025-05-01-icml25.md
@@ -4,4 +4,4 @@ date: 2025-05-01
 inline: true
 ---
 
-Our paper on tuning MCMC kernels in SMC samplers have been accepted to **ICML'25**.
+Our paper on tuning SMC samplers have been accepted to **ICML'25**.
