add neurips paper to bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@inproceedings{kim_nearly_2025,
+  title = {Nearly Dimension-Independent Convergence of Mean-Field Black-Box Variational Inference},
+  author = {Kyurae Kim and Yi-An Ma and Trevor Campbell and Jacob R. Gardner},
+  year = {2025},
+  month = December,
+  selected = {true},
+  %teaser = {/assets/img/teasers/adaptive_smc_incremental_kl.png},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
+}
+
+@inproceedings{maus_covering_2025,
+  title = {Covering Multiple Objectives with a Small Set of Solutions Using {{Bayesian}} Optimization},
+  author = {Natalie Maus and Kyurae Kim and Yimeng Zeng and Haydn Thomas Jones and Fangping Wan and Marcelo Der Torossian Torres and Cesar de la Fuente-Nunez and Jacob R. Gardner},
+  year = {2025},
+  month = December,
+  selected = {false},
+  %teaser = {/assets/img/teasers/adaptive_smc_incremental_kl.png},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}}},
+}
+
 @inproceedings{kim_tuning_2025,
   title = {Tuning Sequential Monte Carlo Samplers via Greedy Incremental Divergence Minimization},
   author = {Kyurae Kim* and Zuheng Xu* and Jacob R. Gardner and Trevor Campbell},
